# x509-server-rust

./: .gitignore  Cargo.toml  README.md
example_bash_scripts/: ecdsa_p256.sh  ecdsa_p384.sh  ed25519.sh  invalid_signature_format.sh  rsa2048.sh
example_certs/: code_signing_ext.cnf  ecdsa_p256.crt  ecdsa_p256.csr  ecdsa_p256.der  ecdsa_p256.key  ecdsa_p256.pem  ecdsa_p384.crt  ecdsa_p384.csr  ecdsa_p384.der  ecdsa_p384.key  ecdsa_p384.pem  non_code_signing.crt  non_code_signing.csr  non_code_signing.der  non_code_signing.key  rsa2048.crt  rsa2048.csr  rsa2048.der  rsa2048.key  rsa2048.pem
example_invalid_certs/: bad.crt  bad.csr  bad.der  bad.key  leaf.crt  leaf.csr  leaf.der  leaf.key  non-code-sigining.crt  non-code-sigining.csr  non-code-sigining.der  non-code-sigining.key
example_unsuccesful_bash_scripts/: non_code_siging_cert.sh  untrusted_cert.sh
scripts/: generate_example_certificates.sh  generate_signed_scripts.sh
src/: crypto.rs  errors.rs  lib.rs  main.rs  server.rs
tests/: crypto_tests.rs  integration.rs  server.rs  utils.rs
