[workspace]
resolver = "2"

[package]
name = "x509-server-rust"
version = "0.0.1"
description = "x509-server."
edition = "2024"

[dependencies]
x509-parser = { version = "0.15", features = ["verify"] }
log = { version = "0.4.22" }
env_logger = "0.10"
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
tokio = { version = "1.37", features = ["net", "rt-multi-thread", "macros", "io-util", "full"] }
tempfile = "3.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rcgen = { version = "0.14", features = ["aws_lc_rs"] }
base64 = "0.22"